Fix Zoom when focusing on input on iOS.

--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,10 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; background-color: #f8f8f8; }
+input[type='text'],
+input[type='number'],
+input[type='tel'],
+input[type='time'],
+textarea {
+  font-size: 16px;
+}
